SetAndForget cleanup